# NanoVNA-QT

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac  deploy_linux.sh  deploy_macos.sh  deploy_windows.sh  env.cfg  run
appimage/: .gitignore  default.desktop
cmake/: FindFFTW.cmake
include/: xavna
libxavna/: CMakeLists.txt  Makefile.am  README.md  calibration.C  common.H  common_types.h  platform_abstraction.C  platform_abstraction_windows.C  xavna.C  xavna_cpp.C
libxavna/include/: calibration.H  common.H  platform_abstraction.H  workarounds.H  xavna.h  xavna_cpp.H  xavna_generic.H
libxavna/xavna_mock_ui/: CMakeLists.txt  xavna_mock.C  xavna_mock_ui.C  xavna_mock_ui.H  xavna_mock_ui.pro  xavna_mock_ui_dialog.C  xavna_mock_ui_dialog.H  xavna_mock_ui_dialog.ui  xavna_mock_ui_global.h
vna_diagtool/: CMakeLists.txt  main.cpp  mainwindow.C  mainwindow.H  mainwindow.ui  vna_diagtool.pro
vna_gtk/: common_types.h  configure.ac  graph_view.H  polar_view.H  vna.glade  vna_main.C  vna_ui_core.C  vna_ui_core.H  xavna_mock.glade
vna_qt/: .gitignore  CMakeLists.txt  calibrationfinetunedialog.C  calibrationfinetunedialog.H  calibrationfinetunedialog.ui  calkitsettings.C  calkitsettings.H  calkitsettingsdialog.C  calkitsettingsdialog.H  calkitsettingsdialog.ui  calkitsettingswidget.ui  configureviewdialog.C  configureviewdialog.H  configureviewdialog.ui  dtfwindow.C  dtfwindow.H  dtfwindow.ui  firmwareupdatedialog.C  firmwareupdatedialog.H  firmwareupdatedialog.ui  firmwareupdater.C  firmwareupdater.H  frequencydialog.C  frequencydialog.H  frequencydialog.ui  graphlimitsdialog.ui  graphpanel.C  graphpanel.H  graphpanel.ui  impedancedisplay.C  impedancedisplay.H  impedancedisplay.ui  main.C  mainwindow.C  mainwindow.H  mainwindow.ui  markerslider.C  markerslider.H  markerslider.ui  networkview.C  (+8 more)
vna_qt/languages/: vna_qt_zh.qm  vna_qt_zh.ts
